[package]
name = "muta"
version = "0.1.0-alpha.0"
authors = ["Muta Dev <muta@nervos.org>"]
edition = "2018"
repository = "https://github.com/nervosnetwork/muta"

[dependencies]
common-logger = { path = "./common/logger" }
common-config-parser = { path = "./common/config-parser" }
common-crypto = { path = "./common/crypto" }
protocol = { path = "./protocol", package = "muta-protocol" }
core-api = { path = "./core/api" }
core-storage = { path = "./core/storage" }
core-mempool = { path = "./core/mempool" }
core-network = { path = "./core/network" }
core-consensus = { path = "./core/consensus" }

binding-macro = { path = "./binding-macro" }
framework = { path = "./framework" }

actix-rt = "1.0"
derive_more = "0.99"
futures = "0.3"
parking_lot = "0.10"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
log = "0.4"
clap = "2.33"
bytes = "0.5"
hex = "0.4"
rlp = "0.4"
toml = "0.5"
tokio = { version = "0.2", features = ["macros", "rt-core", "rt-util", "signal", "time"]}

[dev-dependencies]
asset = { path = "built-in-services/asset"}
metadata = { path = "built-in-services/metadata"}
util = { path = "built-in-services/util"}
account = { path = "built-in-services/account" }

[workspace]
members = [
  "devtools/keypair",

  "common/channel",
  "common/config-parser",
  "common/crypto",
  "common/logger",
  "common/merkle",
  "common/metrics",
  "common/pubsub",

  "core/api",
  "core/consensus",
  "core/mempool",
  "core/network",
  "core/storage",

  "binding-macro",
  "framework",
  "built-in-services/asset",
  "built-in-services/metadata",

  "protocol",
]

[[example]]
name = "muta-chain"
crate-type = ["bin"]
