[package]
name = "binding-macro"
version = "0.2.0"
authors = ["Muta Dev <muta@nervos.org>"]
edition = "2018"
repository = "https://github.com/nervosnetwork/muta"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
doctest = false

[dependencies]
protocol = { path = "../protocol", package = "muta-protocol" }

syn = { version = "1.0", features = ["full"] }
proc-macro2 = "1.0"
quote = "1.0"
derive_more = "0.15"
serde_json = "1.0"

[dev-dependencies]
framework = { path = "../framework" }
bytes = "0.5"
serde = { version = "1.0", features = ["derive"] }
