[package]
name = "framework"
version = "0.2.0-rc"
authors = ["Muta Dev <muta@nervos.org>"]
edition = "2018"
repository = "https://github.com/nervosnetwork/muta"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common-apm = { path = "../common/apm" }
protocol = { path = "../protocol", package = "muta-protocol" }
asset = { path = "../built-in-services/asset"}
metadata = { path = "../built-in-services/metadata"}
util = { path = "../built-in-services/util"}

hasher = { version = "0.1", features = ['hash-keccak'] }
cita_trie = "2.0"
bytes = "0.5"
derive_more = "0.99"
rocksdb = "0.14"
lazy_static = "1.4"
byteorder = "1.3"
rlp = "0.4"
futures = "0.3"
json = "0.12"
hex = "0.4"
serde_json = "1.0"
log = "0.4"
rayon = "1.4"
lru-cache = "0.1"
lru = "0.6"
parking_lot = "0.11"
rand = { version = "0.7", features = ["small_rng"]}

[dev-dependencies]
async-trait = "0.1"
toml = "0.5"
binding-macro = { path = "../binding-macro" }
serde = { version = "1.0", features = ["derive"] }
muta-codec-derive = "0.2"
