[package]
name = "umaru-grpc"
version = "0.1.0"
authors = ["Cryptape Technologies <contact@cryptape.com>"]
edition = "2018"
license = "Apache-2.0"

[lib]
name = "umaru_grpc"

[dependencies]
umaru-proto = { path = "../proto", features = ["with-grpc"] }
umaru-service = { path = "../service" }
dotenv = "0.13.0"
mashup = "0.1.9"
failure = "0.1.3"
protobuf = "2.2.0"
grpc = "0.6.1"
tls-api = "0.1.20"
futures = "0.1.25"
futures-cpupool = "0.1.8"
httpbis = "0.7.0"
bytes = "0.4.11"
num_cpus = "1.9.0"
