[package]
name = "muta"
version = "0.1.0"
authors = ["Cryptape Technologies <contact@cryptape.com>"]
edition = "2018"
license = "Apache-2.0"

[lib]
name = "muta"

[dependencies]
muta-proto = { path = "../proto" }
muta-service = { path = "../service" }
muta-grpc = { path = "../grpc", optional = true }

[features]
with-grpc = ["muta-grpc"]
