[package]
name = "muta-protocol"
version = "0.2.0-rc.2"
authors = ["Muta Dev <muta@nervos.org>"]
edition = "2018"
repository = "https://github.com/nervosnetwork/muta"
license = "MIT"
description = "Contains all the core data types and traits of the muta framework"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
derive_more = "0.99"
async-trait = "0.1"
lazy_static = "1.4"
hex = "0.4"
prost = "0.6"
bytes = { version = "0.5", features = ["serde"] }
hasher = { version = "0.1", features = ['hash-keccak'] }
creep = "0.2"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rlp = "0.4"
cita_trie = "2.0"
json = "0.12"
byteorder = "1.3"
muta-codec-derive = "0.2"
ophelia = "0.3"
ophelia-secp256k1 = "0.3"
bech32 = "0.7"
arc-swap = "0.4"

[dev-dependencies]
rayon = "1.3"
rand = "0.7"
