[package]
name = "umaru"
version = "0.1.0"
authors = ["Cryptape Technologies <contact@cryptape.com>"]
edition = "2018"
license = "Apache-2.0"

[lib]
name = "umaru"

[dependencies]
umaru-proto = { path = "../proto" }
umaru-service = { path = "../service" }
umaru-grpc = { path = "../grpc", optional = true }

[features]
with-grpc = ["umaru-grpc"]
