[package]
name = "account"
version = "0.1.0-alpha.0"
authors = ["Muta Dev <muta@nervos.org>"]
edition = "2018"
repository = "https://github.com/nervosnetwork/muta"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binding-macro = { path = "../../binding-macro" }
protocol = { path = "../../protocol", package = "muta-protocol" }
hasher = { version="0.1", features = ["hash-keccak"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rlp = "0.4"
bytes = "0.5"
derive_more = "0.15"
byteorder = "1.3"
common-crypto = { path = "../../common/crypto" }
hex = "0.4"
rand = "0.7"

[dev-dependencies]
cita_trie = "2.0"
async-trait = "0.1"
framework = { path = "../../framework" }
