[package]
name = "asset"
version = "0.2.0-rc.2"
authors = ["Muta Dev <muta@nervos.org>"]
edition = "2018"
repository = "https://github.com/nervosnetwork/muta"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binding-macro = { path = "../../binding-macro" }
protocol = { path = "../../protocol", package = "muta-protocol" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rlp = "0.4"
bytes = "0.5"
derive_more = "0.99"
byteorder = "1.3"
muta-codec-derive = "0.2"

[dev-dependencies]
cita_trie = "2.0"
async-trait = "0.1"
framework = { path = "../../framework" }
