[package]
name = "multi-signature"
version = "0.2.0-beta3"
authors = ["Muta Dev <muta@nervos.org>"]
edition = "2018"
repository = "https://github.com/nervosnetwork/muta"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binding-macro = { path = "../../binding-macro" }
byteorder = "1.3"
common-crypto = { path = "../../common/crypto" }
derive_more = "0.99"
hasher = { version="0.1", features = ["hash-keccak"] }
hex = "0.4"
lazy_static = "1.4"
muta-codec-derive = "0.2"
protocol = { path = "../../protocol", package = "muta-protocol" }
rand = "0.7"
rlp = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
async-trait = "0.1"
cita_trie = "2.0"
framework = { path = "../../framework" }
