[package]
name = "common-apm"
version = "0.2.1"
authors = ["Muta Dev <muta@nervos.org>"]
edition = "2018"
repository = "https://github.com/nervosnetwork/muta"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protocol = { path = "../../protocol", package = "muta-protocol" }

muta-apm = "0.1.0-alpha.15"
prometheus = "0.10"
prometheus-static-metric = "0.5"
derive_more = "0.99"
lazy_static = "1.4"
