[package]
name = "common-config-parser"
version = "0.1.0"
authors = ["Cryptape Technologies <contact@cryptape.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9"
serde = "1.0"
serde_derive = "1.0"
stringreader = "0.1"
toml = "0.4"
