[package]
name = "common-config-parser"
version = "0.2.1"
authors = ["Muta Dev <muta@nervos.org>"]
edition = "2018"
repository = "https://github.com/nervosnetwork/muta"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9"
serde = "1.0"
serde_derive = "1.0"
stringreader = "0.1"
toml = "0.4"

core-consensus = { path = "../../core/consensus" }
core-mempool = { path = "../../core/mempool" }
protocol = { path = "../../protocol", package = "muta-protocol" }
