[package]
name = "common-crypto"
version = "0.1.0-alpha.0"
authors = ["Muta Dev <muta@nervos.org>"]
edition = "2018"
repository = "https://github.com/nervosnetwork/muta"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ophelia-bls-amcl = "0.2"
ophelia-secp256k1 = "0.2"
ophelia = "0.2"
