[package]
name = "common-crypto"
aversion = "0.2.0-beta3"
authors = ["Muta Dev <muta@nervos.org>"]
edition = "2018"
repository = "https://github.com/nervosnetwork/muta"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ophelia-bls-amcl = "0.3"
ophelia-secp256k1 = "0.3"
ophelia = "0.3"

[dev-dependencies]
overlord = "0.2.0-alpha.11"
protocol = { path = "../../protocol", package = "muta-protocol"}
rand = "0.7"
rlp = "0.4"
