[package]
name = "common-logger"
version = "0.2.0-rc"
authors = ["Muta Dev <muta@nervos.org>"]
edition = "2018"
repository = "https://github.com/nervosnetwork/muta"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
# Turn off default features should turn off gzip feature. For more information,
# reference log4rs document. gzip feature will be removed from default features as
# of 1.0.
log4rs = { version = "0.13", default-features = false }
json = "0.12"
