[package]
name = "common-logger"
version = "0.2.0-rc"
authors = ["Muta Dev <muta@nervos.org>"]
edition = "2018"
repository = "https://github.com/nervosnetwork/muta"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
log4rs = { version = "0.13", features = ["all_components", "file", "yaml_format"] }
json = "0.12"
