[package]
name = "common-logger"
version = "0.2.0-rc.2"
authors = ["Muta Dev <muta@nervos.org>"]
edition = "2018"
repository = "https://github.com/nervosnetwork/muta"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
# Turn off gzip feature, it hurts performance. For more information, reference
# log4rs document.
log4rs = { version = "0.13", features = ["all_components", "file", "yaml_format"] }
json = "0.12"
creep = "0.2"
rustracing_jaeger = "0.5"
serde = "1.0"
serde_derive = "1.0"
chrono = "0.4"