[package]
name = "common-merkle"
version = "0.1.0"
authors = ["Cryptape Technologies <contact@cryptape.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.4"
protocol = { path = "../../protocol" }
rayon = "1.0"
static_merkle_tree = { git = "https://github.com/yejiayu/static-merkle-tree.git", branch = "trait_scope" }
