[package]
name = "common-merkle"
version = "0.1.0"
authors = ["Muta Dev <muta@nervos.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.4"
protocol = { path = "../../protocol" }
rayon = "1.0"
static_merkle_tree = "1.1.0"
