[package]
name = "common-merkle"
version = "0.2.0-rc"
authors = ["Muta Dev <muta@nervos.org>"]
edition = "2018"
repository = "https://github.com/nervosnetwork/muta"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protocol = { path = "../../protocol", package = "muta-protocol" }
rayon = "1.4"
static_merkle_tree = "1.1.0"

[dev-dependencies]
rand = "0.7"
