[package]
name = "common-pprof"
version = "0.2.0-rc.2.1"
authors = ["Muta Dev <muta@nervos.org>"]
edition = "2018"
repository = "https://github.com/nervosnetwork/muta"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pprof = { version = "0.3", features = ["flamegraph", "protobuf"] }
lazy_static = "1.4"
tokio = { version = "0.2", features = [ "sync", "time", "fs" ] }
derive_more = "0.99"
