[package]
name = "components-cita-jsonrpc"
version = "0.1.0"
authors = ["Cryptape Technologies <contact@cryptape.com>"]
edition = "2018"

[dependencies]
log="0.4"
jsonrpc-core = "10.1"
jsonrpc-derive = "10.1"
jsonrpc-server-utils = "10.1"
jsonrpc-http-server = "10.1"
num_cpus = "1.0"
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
ethereum-types = "0.3.2"
numext-fixed-uint = "0.1"
numext-fixed-hash = "0.1"
futures = "0.1"
failure = "0.1"
rlp = "0.3"
transient-hashmap = "0.4"
parking_lot = "0.7"
jsonrpc-types = { git = "https://github.com/cryptape/cita-common.git", rev = "68b31af3d73a042363da3da53639860f8fa6339a" }

core-crypto = { path = "../../core/crypto" }
core-runtime = { path = "../../core/runtime" }
core-types = { path = "../../core/types" }
core-storage = { path = "../../core/storage" }
core-serialization = { path = "../../core/serialization" }
core-merkle = { path = "../../core/merkle" }
