[package]
name = "components-database"
version = "0.1.0"
authors = ["Cryptape Technologies <contact@cryptape.com>"]
edition = "2018"

[dependencies]
core-runtime = { path = "../../core/runtime" }
core-context = { path = "../../core/context" }

logger = { path = "../../common/logger" }

log = "0.4"
rocksdb = "0.12.0"

tokio-async-await = { version = "0.1" }

[dev-dependencies]
futures = "0.1"
