[package]
name = "components-database"
version = "0.1.0"
authors = ["Cryptape Technologies <contact@cryptape.com>"]
edition = "2018"

[dependencies]
core-runtime = { path = "../../core/runtime" }
core-context = { path = "../../core/context" }

logger = { path = "../../common/logger" }

log = "0.4"
rocksdb = "0.12.0"
futures-preview = { version = "0.3.0-alpha.14", features = [ "compat" ] }

[dev-dependencies]
futures01 = { package = "futures", version = "0.1" }
