[package]
name = "components-database"
version = "0.1.0"
authors = ["Cryptape Technologies <contact@cryptape.com>"]
edition = "2018"

[dependencies]
core-runtime = { path = "../../core/runtime" }
core-context = { path = "../../core/context" }

log = "0.4"
rocksdb = "0.12.0"

[dev-dependencies]
futures-preview = "0.3.0-alpha.16"
