[package]
name = "components-executor"
version = "0.1.0"
authors = ["Cryptape Technologies <contact@cryptape.com>"]
edition = "2018"

[dependencies]
core-runtime = { path = "../../core/runtime" }
core-storage = { path = "../../core/storage" }
core-types = { path = "../../core/types" }
core-context = { path = "../../core/context" }

parking_lot = "0.8"
cita-vm = "0.1"
log = "0.4"
ethereum-types = "0.4"
hex = "0.3"
cita_trie = "0.4"
futures-preview = "0.3.0-alpha.16"

[dev-dependencies]
common-logger = { path = "../../common/logger" }
core-crypto = { path = "../../core/crypto" }
