[package]
name = "components-jsonrpc"
version = "0.1.0"
authors = ["Cryptape Technologies <contact@cryptape.com>"]
edition = "2018"

[dependencies]
actix = "0.8"
actix-web = "1.0.0-beta.5"
old_futures = { package = "futures", version = "0.1" }
futures-preview = { version = "=0.3.0-alpha.14", features = ["compat"] }
futures-util-preview = { version = "=0.3.0-alpha.14" }
futures-locks = "0.3"

bytes = "0.4"
ethbloom = "0.6"
hex = "0.3"
rlp = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
env_logger = "0.6"
ethereum-types-serialize = "0.2"
json = "0.11"
log = "0.4"
numext-fixed-uint = "0.1"
numext-fixed-hash = "0.1"

common-cita = { path = "../../common/cita" }

core-context = { path = "../../core/context" }
core-merkle = { path = "../../core/merkle" }
core-runtime = { path = "../../core/runtime" }
core-types = { path = "../../core/types" }
core-pubsub = { path = "../../core/pubsub" }
core-storage = { path = "../../core/storage" }
core-serialization = { path = "../../core/serialization" }
core-crypto = { path = "../../core/crypto" }

[dev-dependencies]
common-logger = { path = "../../common/logger" }
