[package]
name = "components-transaction-pool"
version = "0.1.0"
authors = ["Cryptape Technologies <contact@cryptape.com>"]
edition = "2018"

[dependencies]
core-types = { path = "../../core/types" }
core-crypto = { path = "../../core/crypto" }
core-runtime = { path = "../../core/runtime" }
core-storage = { path = "../../core/storage" }
core-context = { path = "../../core/context" }
core-pubsub = { path = "../../core/pubsub" }

parking_lot = "0.7"
futures = "0.1"
log = "0.4"
# TODO: rename futures01 instead
futures03 = { package = "futures-preview", version = "=0.3.0-alpha.14", features = [ "compat" ] }

[dev-dependencies]
components-database = { path = "../database" }
hex = "0.3"
