[package]
name = "components-transaction-pool"
version = "0.1.0"
authors = ["Cryptape Technologies <contact@cryptape.com>"]
edition = "2018"

[dependencies]
common-cita = { path = "../../common/cita" }
common-channel = { path = "../../common/channel" }

core-types = { path = "../../core/types" }
core-crypto = { path = "../../core/crypto" }
core-runtime = { path = "../../core/runtime" }
core-storage = { path = "../../core/storage" }
core-context = { path = "../../core/context" }
core-pubsub = { path = "../../core/pubsub" }

parking_lot = "0.8"
log = "0.4"
futures-preview = "0.3.0-alpha.16"
rayon = "1.0"
runtime = "0.3.0-alpha.4"

[dev-dependencies]
components-database = { path = "../database" }
hex = "0.3"
uuid = { version = "0.7", features = ["serde", "v4"] }
chashmap = "2.2"
runtime-tokio = "0.3.0-alpha.4"
