[package]
name = "core-api"
version = "0.1.0"
authors = ["Muta Dev <muta@nervos.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protocol = { path = "../../protocol" }
common-crypto = { path = "../../common/crypto"}

http = "0.1"
tide = { git = "https://github.com/rustasync/tide", rev = "af0b900" }
juniper = "0.13"
juniper_codegen = "0.13"
async-trait = "0.1"
hex = "0.3"
bytes = "0.4"
futures = "0.3"
