[package]
name = "core-api"
version = "0.1.0-alpha.0"
authors = ["Muta Dev <muta@nervos.org>"]
edition = "2018"
repository = "https://github.com/nervosnetwork/muta"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protocol = { path = "../../protocol", package = "muta-protocol" }
common-crypto = { path = "../../common/crypto"}

http-service = "0.4"
http = "0.2"
tide = "0.5"
juniper = "0.14"
juniper_codegen = "0.14"
async-trait = "0.1"
hex = "0.4"
futures = "0.3"
derive_more = "0.15"
cita_trie = "2.0"
bytes = "0.5"
