[package]
name = "core-binding-macro"
version = "0.1.0"
authors = ["Muta Dev <muta@nervos.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
doctest = false

[dependencies]
core-binding = { path = "../binding" }

syn = { version = "1.0", features = ["full"] }
proc-macro2 = "1.0"
quote = "1.0"

[dev-dependencies]
protocol = { path = "../../protocol" }

json = "0.12"
serde_json = "1.0"
bytes = "0.4"
serde = { version = "1.0", features = ["derive"] }
