[package]
name = "cli"
version = "0.2.1"
authors = ["Muta Dev <muta@nervos.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = "0.3"
actix-rt = "1.0"
derive_more = "0.99"
futures = "0.3"
parking_lot = "0.11"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
log = "0.4"
clap = "2.33"
bytes = "0.5"
hex = "0.4"
rlp = "0.4"
toml = "0.5"
tokio = { version = "0.2", features = ["macros", "sync", "rt-core", "rt-util", "signal", "time"] }
muta-apm = "0.1.0-alpha.7"
futures-timer="3.0"
cita_trie = "2.0"
fs_extra = "1.2.0"

byzantine = { path = "../../byzantine" }
common-apm = { path = "../../common/apm" }
common-config-parser = { path = "../../common/config-parser" }
common-crypto = { path = "../../common/crypto" }
common-logger = { path = "../../common/logger" }
protocol = { path = "../../protocol", package = "muta-protocol" }
core-api = { path = "../../core/api" }
core-storage = { path = "../../core/storage" }
core-mempool = { path = "../../core/mempool" }
core-network = { path = "../../core/network" }
core-consensus = { path = "../../core/consensus" }

binding-macro = { path = "../../binding-macro" }
framework = { path = "../../framework" }
run = {path = "../run"}

[dev-dependencies]
cita_trie = "2.0"
async-trait = "0.1"
toml = "0.5"
lazy_static = "1.4"
muta-codec-derive = "0.2"
asset = { path = "../../built-in-services/asset" }
multi-signature = { path = "../../built-in-services/multi-signature" }
authorization = { path = "../../built-in-services/authorization" }
metadata = { path = "../../built-in-services/metadata"}
util = { path = "../../built-in-services/util"}
rand = "0.7"
core-network = { path = "../../core/network", features = ["diagnostic"] }
tokio = { version = "0.2", features = ["full"] }